# auction-contract-plutus

./: README.md  auction-plutus.cabal  cabal.project
app/: auction-plutus.hs  datum-bid-json.hs  datum-json.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4.20210212/: auction-plutus-0.1.0.0-inplace.conf  package.cache  unsigs-plutus-0.1.0.0-inplace.conf
dist-newstyle/src/: Win32-net_-e9415802910225c6.cache  cardano-a_-69e96f3eceed3ed5.cache  cardano-b_-c0de99f0ccd585cd.cache  cardano-c_-94cfeccbf1aa3cf5.cache  cardano-l_-acad124fece29d34.cache  cardano-n_-870b8b2b68d602a2.cache  cardano-p_-98329c466570048a.cache  cardano-w_-c9e033b0ec7ad11b.cache  flat-64b673dc3eef5b9f.cache  goblins-7fe4f5e9bbbd1224.cache  iohk-moni_-c7ca6b005d6f76c5.cache  optparse-_-5b3aca9bcb30ab3a.cache  ouroboros_-268d3b2310e5b441.cache  plutus-3b55de0732f6b166.cache  plutus-ap_-cbcc5c6ab544aad6.cache  purescrip_-76d561c4df795bb9.cache  servant-p_-e28973085ebef430.cache
pab/: Main.hs
src/: SerialiseJSON.hs  Utility.hs
src/Auction/: Offchain.hs  Onchain.hs  Trace.hs  Types.hs
testnet/: auction.addr  auction.plutus  balance.sh  closeSale.sh  getDeadline.sh  getTxFunc.sh  mkBid.sh  multiWit.sh  offerToken.sh
testnet/wallets/: owner1.addr  owner1.pkh  owner1.skey  owner1.vkey  owner2.addr  owner2.pkh  owner2.skey  owner2.vkey
