cabal-version:      2.4
name:               auction
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             https://discord.com/channels/@adrian.#4706

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Utility
      SerialiseJSON
      Auction.Onchain
      Auction.Offchain
      Auction.Types 
      Auction.Trace 
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      text,
      cardano-api,
      serialise,
      plutus-ledger-api,
      plutus-chain-index,
      data-default,
      plutus-use-cases,
      tasty,
      plutus-ledger-constraints,
      plutus-chain-index-core
    hs-source-dirs: src src/Market src/Auction


executable auction-plutus
  hs-source-dirs:       app
  main-is:              auction-plutus.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , auction
                      , plutus-ledger-api
                      , bytestring
                      , cardano-ledger-alonzo
                      , base


executable datum-json
  hs-source-dirs:       app
  main-is:              datum-json.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        auction
                      , bytestring
                      , cardano-api
                      , plutus-tx
                      , aeson
                      , base 
                      , plutus-ledger-api
                      , plutus-ledger

executable datum-bid-json
  hs-source-dirs:       app
  main-is:              datum-bid-json.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        auction
                      , bytestring
                      , cardano-api
                      , plutus-tx
                      , aeson
                      , base 
                      , plutus-ledger-api
                      , plutus-ledger
